chore: 타임아웃을 5초에서 30초로 변경하고, URLEncoder.encode에서 StandardCharsets.UTF_8 사용