@@ -6,6 +6,7 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 @RequiredArgsConstructor
 @Component
@@ -20,7 +21,7 @@ public class BusinessJusoApi {
 
     public PublicAddress getBusinessJusoData(String keyword) throws Exception {
         String url = BASE_URL + "1&countPerPage=1"
-                + "&keyword=" + URLEncoder.encode(keyword, "UTF-8")
+                + "&keyword=" + URLEncoder.encode(keyword, StandardCharsets.UTF_8)
                 + "&confmKey=" + API_KEY
                 + "&resultType=json";
 
